# uas-strukdat-alpro

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  PROJECT_GUIDE.md  PROJECT_STATUS.md  Panduan UAS Terintegrasi.md  README.md  WALKTHROUGH.md  a.out  add_affinities.py  add_elemental_slimes.py  add_magic.py  add_more_monsters.py  debug_miniaudio.txt  fix_all_ids.py  fix_battle_log.py  fix_choices.py  fix_choices2.py  fix_ids.py  fix_json.py  generate_stats.py  input.txt  modify_json.py  patch.diff  patch2.diff  patch_places.py  rework_biara_scenes.py  run_gdb.sh  run_pty.py  run_pty2.py  run_test.py  savegame.json  shell.nix  test_db.cpp  test_ma.cpp  test_ptr.cpp  test_tidur.cpp  update_json.py
.opencode/plans/: fix-popup-border.md
data/: CONTENT_GUIDE.md  dungeon_pools.json  endings.json
data/dialogs/: arthur_scenes.json  biara_scenes.json  biara_storyline.json  church_route_garrick.json  church_route_silas.json  church_route_v2.json  day1_cs10.json  day1_cs11.json  day1_cs12.json  day1_cs13.json  day1_cs14.json  day1_cs2.json  day1_cs3.json  day1_cs4.json  day1_cs5.json  day1_cs6.json  day1_cs7.json  day1_cs8.json  day1_cs9.json  day1_start.json  day2_opening.json  endings.json  expanded_storyline.json  fast_travel_event.json  first_meets.json  generic_dialogs.json  guard_quests.json  missing_idles.json  permukiman_kumuh.json  quest_start_example.json  shop_dialogs.json
data/items/: bread.json  bukti_gagak.json  bunga_langka.json  dokumen_gudang.json  fire_ring.json  food_nasi_goreng.json  food_sate_ayam.json  iron_sword.json  item_bat_wing.json  item_bjorn_axe.json  item_bone.json  item_bulwark_vow.json  item_burial_map.json  item_dead_contract.json  item_dignity_badge.json  item_dragon_scale.json  item_fire_core.json  item_goblin_ear.json  item_gold_pouch.json  item_kancing_mewah.json  item_mark_debuff.json  item_nirva_sword.json  item_orc_axe.json  item_roti_pasar.json  item_shadow_blade.json  item_slime_gel.json  item_stone_heart.json  item_timbangan_asli.json  item_troll_blood.json  item_vampire_fang.json  item_water_drop.json  item_wind_feather.json  item_wolf_pelt.json  leather_armor.json  leather_boots.json  magic_book_earth_spike.json  magic_book_earth_tremor.json  magic_book_fire_bolt.json  magic_book_fire_wall.json  magic_book_heal.json  (+16 more)
data/monsters/: ancient_dragon.json  bandit_scum.json  boss_bfb_01.json  earth_slime.json  fire_elemental.json  fire_slime.json  forest_troll.json  giant_bat.json  goblin.json  mob_bfb_04.json  orc_boss.json  shadow_knight.json  skeleton_warrior.json  slime.json  stone_golem.json  vampire_lord.json  water_slime.json  wind_slime.json  wolf.json
data/npcs/: acolyte_1.json  acolyte_2.json  andreas.json  arthur.json  citizen_1.json  citizen_2.json  citizen_3.json  citizen_4.json  elara.json  garrick.json  guard_1.json  guard_2.json  guard_3.json  kael.json  lukas.json  maria.json  merchant_1.json  merchant_2.json  npc_bara.json  npc_bjorn.json  npc_hugo.json  npc_suspicious_person.json  npc_tara.json  silas.json  thug_1.json  thug_2.json  valerius.json  vane.json
data/origin-draft/: Draf Karakter dan Dinamika Dunia Nirva.md  Draf Worldbuilding Kota Nirva dan Wilayah Luar.md
data/places/: alun_alun.json  balai_kota.json  biara.json  blacksmith_budi.json  general_store_anton.json  gua_tambang.json  jalanan_barat_kota.json  jalanan_kota.json  jalanan_selatan_kota.json  jalanan_timur_kota.json  jalanan_utara_kota.json  kamar_loteng.json  kandang_kuda.json  kedai_usang.json  magic_book_store.json  menara_tua.json  pasar_kota.json  permukiman_kumuh.json  restoran_warteg.json
data/quests/: quest_gereja_1.json  quest_gereja_2.json  quest_gereja_3.json  quest_gereja_4.json  quest_gereja_elara_1.json  quest_gereja_kael_1.json  quest_gereja_kael_1_garrick.json  quest_gereja_silas_1.json  quest_guard1.json  quest_guard4.json  quest_stable_investigation.json  quest_survei_kota.json  quest_timbangan.json  stable_investigation.json  warga_miskin.json
data/shops/: blacksmith_budi.json  general_store.json  magic_book_store.json  restoran_warteg.json  traveling_merchant_shop.json
saves/: Udin1 .json  savegame.json  test.json  test_bad_ending.json  test_good_ending.json
scratch/: main.cpp  stack.cpp  town_diff.patch
scripts/: purge.sh
src/: GameEngine.cpp  GameEngine.hpp  main.cpp
src/actions/: Actions.cpp  Actions.hpp
src/db/: DB.cpp  DB.hpp
src/enums/: DayTime.hpp  Element.hpp  ItemType.hpp  QuestState.hpp  Tactic.hpp
src/managers/: DialogManagers.cpp  DialogManagers.hpp  LogManager.cpp  LogManager.hpp  MusicManager.cpp  MusicManager.hpp  PlaceManagers.hpp  PlayerManager.cpp  PlayerManager.hpp  QuestManagers.cpp  QuestManagers.hpp  SaveManager.cpp  SaveManager.hpp  ShopManager.cpp  ShopManager.hpp  TimeCalendarManagers.cpp  TimeCalendarManagers.hpp
src/models/: Activity.hpp  CombatActions.hpp  Condition.cpp  Condition.hpp  Dialog.hpp  Dungeon.hpp  Item.hpp  NPC.hpp  Place.hpp  Player.cpp  Player.hpp  Quest.hpp  Shop.hpp
src/states/: BattleState.cpp  BattleState.hpp  DungeonState.cpp  DungeonState.hpp  EndingState.cpp  EndingState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.hpp  InventoryState.cpp  InventoryState.hpp  ShopState.cpp  ShopState.hpp  StartState.cpp  StartState.hpp  StatAllocationState.cpp  StatAllocationState.hpp  TownState.cpp  TownState.hpp
src/utils/: CircularLinkedList.hpp  DoubleLinkedList.hpp  EncyclopediaBST.hpp  Logger.cpp  (+7 more)
(+21 files in other folders)
